8361355: Negative cases of Annotated.getAnnotationData implementations are broken
Reviewed-by: never